--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,7 +86,7 @@ body {
 
 .slick-carousel img {
     height: 300px; 
-    margin: 0px 5px 0px 5px;
+    padding: 0px 3px 0px 3px;
     object-fit: cover;
     width: 100%; 
     border-radius: 10%;
