--- a/css/estilos.css
+++ b/css/estilos.css
@@ -86,7 +86,8 @@ body {
 
 .slick-carousel img {
     height: 300px; 
-    padding: 0px 5px 0px 5px;
+    padding-left: 5px;
+    padding-right: 5px;
     object-fit: cover;
     width: 100%; 
     border-radius: 10%;
