--- a/css/gallery.css
+++ b/css/gallery.css
@@ -23,7 +23,7 @@
 	height: 100%;
 	object-fit: cover;
     border-radius: 15%;
-    transform: scale(1.05);
+    
   }
 
   .gallery > * > * > * > img{
@@ -32,7 +32,6 @@
 	object-fit: cover;
     border-radius: 15%;
     overflow: hidden;
-    transform: scale(1.05);
   }
 
   .gallery > * > * > * > * > img{
@@ -41,7 +40,6 @@
 	object-fit: cover;
     border-radius: 15%;
     overflow: hidden;
-    transform: scale(1.05);
   }
 .foto1 {
     margin-top: 70%;
@@ -84,9 +82,13 @@
 
 div > div > img {
     border-radius: 30px;
-    transform: scale(1.05);
+    
 } /*version2*/
 
 h1{
     font-family: 'Playfair Display';;
+}
+
+img:hover {
+    transform: scale(1.05);
 }
