--- a/css/gallery.css
+++ b/css/gallery.css
@@ -18,23 +18,7 @@
     overflow: hidden;
 }
 
-.gallery > * > * > img{
-    width: 100%;
-	height: 100%;
-	object-fit: cover;
-    border-radius: 15%;
-    
-  }
-
-  .gallery > * > * > * > img{
-    width: 100%;
-	height: 100%;
-	object-fit: cover;
-    border-radius: 15%;
-    overflow: hidden;
-  }
-
-  .gallery > * > * > * > * > img{
+img{
     width: 100%;
 	height: 100%;
 	object-fit: cover;
@@ -63,7 +47,7 @@
     margin-top: 35%;
     width: 280px;
     height: 280px;
-    
+    margin-bottom: 5%;
 }
 
 .foto5 {
@@ -89,6 +73,11 @@ h1{
     font-family: 'Playfair Display';;
 }
 
-img:hover {
+.foto1:hover,
+.foto2:hover,
+.foto3:hover,
+.foto4:hover,
+.foto5:hover,
+.foto6:hover {
     transform: scale(1.05);
 }
