--- a/css/gallery.css
+++ b/css/gallery.css
@@ -5,6 +5,12 @@
     text-align: center;
 }
 
+/*first gallery*/
+div > div > img {
+    border-radius: 30px;
+    
+}
+
 .gallery {
     justify-content: center;
     display: flex;
@@ -22,52 +28,51 @@ img{
     width: 100%;
 	height: 100%;
 	object-fit: cover;
-    border-radius: 15%;
+    border-radius: 35px;
     overflow: hidden;
   }
+
+
 .foto1 {
     margin-top: 70%;
-    width: 200px;
-    height: 200px;
+    width: auto;
+    aspect-ratio: 1 / 1;
 }
 
 .foto2 {
     margin-top: 10%;
-    width: 260px;
-    height: 260px;
+    width: 60%;
+    aspect-ratio: 1 / 1;
 }
 
 .foto3 {
     margin-top: 10%;
-    width: 220px;
-    height: 220px;
+    width: 51%;
+    aspect-ratio: 1 / 1;
 }
 
 .foto4 {
     margin-top: 35%;
-    width: 280px;
-    height: 280px;
+    width: 95%;
+    aspect-ratio: 1 / 1;
     margin-bottom: 5%;
 }
 
 .foto5 {
     margin-top: 5%;
-    width: 310px;
-    height: 310px;
+    width: 88%;
+    aspect-ratio: 1 / 1;
 }
 
 .foto6 {
-    margin-left: 170px;
+    margin-left: 25%;
     margin-top: 20px;
-    width: 260px;
-    height: 260px;
+    width: 40%;
+    aspect-ratio: 1 / 1;
     margin-bottom: 5%;
 }
 
-div > div > img {
-    border-radius: 30px;
-    
-} /*version2*/
+
 
 h1{
     font-family: 'Playfair Display';;
@@ -81,3 +86,73 @@ h1{
 .foto6:hover {
     transform: scale(1.05);
 }
+
+.column0 {
+    display: flex;
+    max-width:38%;
+}
+
+.column1 {
+    max-width:34.2%;
+}
+
+.column2 {
+    max-width:65.8%;
+}
+
+.column3 {
+    max-width:35.5%;
+}
+
+.column4 {
+    max-width:45%;
+    justify-content: center;
+}
+
+.column5 {
+    max-width:55%;
+}
+
+@media (max-width: 1024px) {
+    .column0 {
+        max-width:52%;
+    }
+
+    .column1 {
+        max-width:34.6%;
+        padding: 1%;
+    }
+    
+    .column2 {
+        max-width:65.4%;
+        padding: 1%;
+    }
+    
+    .column3 {
+        max-width:48%;
+    }
+    
+}
+
+@media (max-width: 538px) {
+    .gallery{
+        display: grid;
+    }
+    .column0 {
+        max-width: 100%;
+    }
+    .column1 {
+        max-width:32%;
+        padding: 1%;
+    }
+    
+    .column2 {
+        max-width:68%;
+        padding: 1%;
+    }
+    
+    .column3 {
+        max-width:100%;
+    }
+}
+
